--- a/index.html
+++ b/index.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <title>Coffee Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <header class="header">
+        <section>
+            <a href="#" class="logo">
+                <img src="assets/logo.png" alt="logo">
+            </a>
+
+            <nav class="navbar">
+                <a href="#">Home</a>
+                <a href="#abaout">Sobre</a>
+                <a href="#menu">Menu</a>
+                <a href="#review">Avalições</a>
+                <a href="#addrress">Endereço</a>
+            </nav>
+
+            <div class="icons">
+                <img width="30" height="30" src="https://img.icons8.com/ios/30/ffffff/search--v1.png"
+                    alt="search--v1" />
+                <img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/ffffff/shopping-cart--v1.png"
+                    alt="shopping-cart--v1" />
+            </div>
+        </section>
+
+    </header>
 </body>
+
 </html>
