--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             </a>
 
             <nav class="navbar">
-                <a href="#">Home</a>
-                <a href="#abaout">Sobre</a>
+                <a href="#home">Home</a>
+                <a href="#about">Sobre</a>
                 <a href="#menu">Menu</a>
                 <a href="#review">Avalições</a>
                 <a href="#addrress">Endereço</a>
@@ -35,8 +35,39 @@
                     alt="shopping-cart--v1" />
             </div>
         </section>
-
     </header>
+
+    <div class="home-container">
+        <section id="#home">
+            <div class="content">
+                <h3>CODE COM O MELHOR CAFÉ DA REGIÃO</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, labore voluptatem? Voluptas, dolorem
+                    assumenda. Laborum, illo, sequi quasi esse alias minima in commodi dolorem fugiat facere iure quos
+                    rem. Quis.</p>
+                <a href="#" class="btn">Pegue o seu Agora</a>
+            </div>
+        </section>
+    </div>
+
+    <section class="about" id="about">
+        <h2 class="tittle">Sobre <span>Nós</span></h2>
+        <div class="row">
+            <div class="container-image">
+                <img src="assets/about-img.jpg" alt="sobre-nos">
+            </div>
+            <div class="content">
+                <h3>O que faz nosso café Especial</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, possimus eligendi. Sequi placeat
+                    alias excepturi commodi ullam id, itaque soluta voluptatum vero! Fuga repellat suscipit iste,
+                    quaerat consectetur aliquam nulla?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos quas voluptatibus libero! Eos at
+                    eveniet numquam iure sunt dolorem tempore corporis cupiditate accusantium, explicabo, enim fugit
+                    aspernatur in officiis adipisci.</p>
+                    <a href="#" class="btn">Saiba Mias</a>
+            </div>
+
+        </div>
+    </section>
 </body>
 
 </html>
