--- a/index.html
+++ b/index.html
@@ -63,7 +63,51 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos quas voluptatibus libero! Eos at
                     eveniet numquam iure sunt dolorem tempore corporis cupiditate accusantium, explicabo, enim fugit
                     aspernatur in officiis adipisci.</p>
-                    <a href="#" class="btn">Saiba Mias</a>
+                <a href="#" class="btn">Saiba Mais</a>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="menu" id="menu">
+        <h2 class="tittle">Nosso <span>Menu</span></h2>
+
+        <div class="box-container">
+            <div class="box">
+                <img src="assets/menu-1.png" alt="item-1">
+                <h3>Café coado</h3>
+                <div class="price">R$ 15,99 <span>R$ 20,99</span></div>
+                <a href="#" class="btn">Adicione ao Carrinho</a>
+            </div>
+            <div class="box">
+                <img src="assets/menu-2.png" alt="item-2">
+                <h3>Café coado</h3>
+                <div class="price">R$ 15,99 <span>R$ 20,99</span></div>
+                <a href="#" class="btn">Adicione ao Carrinho</a>
+            </div>
+            <div class="box">
+                <img src="assets/menu-3.png" alt="item-3">
+                <h3>Café coado</h3>
+                <div class="price">R$ 15,99 <span>R$ 20,99</span></div>
+                <a href="#" class="btn">Adicione ao Carrinho</a>
+            </div>
+            <div class="box">
+                <img src="assets/menu-4.png" alt="item-4">
+                <h3>Café coado</h3>
+                <div class="price">R$ 15,99 <span>R$ 20,99</span></div>
+                <a href="#" class="btn">Adicione ao Carrinho</a>
+            </div>
+            <div class="box">
+                <img src="assets/menu-5.png" alt="item-5">
+                <h3>Café coado</h3>
+                <div class="price">R$ 15,99 <span>R$ 20,99</span></div>
+                <a href="#" class="btn">Adicione ao Carrinho</a>
+            </div>
+            <div class="box">
+                <img src="assets/menu-6.png" alt="item-6">
+                <h3>Café coado</h3>
+                <div class="price">R$ 15,99 <span>R$ 20,99</span></div>
+                <a href="#" class="btn">Adicione ao Carrinho</a>
             </div>
 
         </div>
