--- a/index.html
+++ b/index.html
@@ -75,40 +75,121 @@
         <div class="box-container">
             <div class="box">
                 <img src="assets/menu-1.png" alt="item-1">
-                <h3>Café coado</h3>
+                <h3>Café Expresso</h3>
                 <div class="price">R$ 15,99 <span>R$ 20,99</span></div>
                 <a href="#" class="btn">Adicione ao Carrinho</a>
             </div>
             <div class="box">
                 <img src="assets/menu-2.png" alt="item-2">
-                <h3>Café coado</h3>
-                <div class="price">R$ 15,99 <span>R$ 20,99</span></div>
+                <h3>Café Coado</h3>
+                <div class="price">R$ 10,99 <span>R$ 15,99</span></div>
                 <a href="#" class="btn">Adicione ao Carrinho</a>
             </div>
             <div class="box">
                 <img src="assets/menu-3.png" alt="item-3">
-                <h3>Café coado</h3>
-                <div class="price">R$ 15,99 <span>R$ 20,99</span></div>
+                <h3>Café Turco</h3>
+                <div class="price">R$ 18,99 <span>R$ 23,99</span></div>
                 <a href="#" class="btn">Adicione ao Carrinho</a>
             </div>
             <div class="box">
                 <img src="assets/menu-4.png" alt="item-4">
-                <h3>Café coado</h3>
-                <div class="price">R$ 15,99 <span>R$ 20,99</span></div>
+                <h3>Café Cold Brew</h3>
+                <div class="price">R$ 19,99 <span>R$ 24,99</span></div>
                 <a href="#" class="btn">Adicione ao Carrinho</a>
             </div>
             <div class="box">
                 <img src="assets/menu-5.png" alt="item-5">
-                <h3>Café coado</h3>
-                <div class="price">R$ 15,99 <span>R$ 20,99</span></div>
+                <h3>café Argentino</h3>
+                <div class="price">R$ 10,99 <span>R$ 13,99</span></div>
                 <a href="#" class="btn">Adicione ao Carrinho</a>
             </div>
             <div class="box">
                 <img src="assets/menu-6.png" alt="item-6">
-                <h3>Café coado</h3>
+                <h3>Café Italiano</h3>
                 <div class="price">R$ 15,99 <span>R$ 20,99</span></div>
                 <a href="#" class="btn">Adicione ao Carrinho</a>
             </div>
+        </div>
+    </section>
+
+    <section class="review" id="review">
+        <h2 class="tittle">Nossos <span>Clientes</span></h2>
+
+        <div class="box-container">
+            <div class="box">
+                <img src="assets/quote-img.png" alt="comentario">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe mollitia, atque blanditiis suscipit
+                    natus accusamus, ex facilis itaque omnis rerum aut cum voluptas eius qui quam eveniet neque illo
+                    incidunt.</p>
+                <img src="assets/pic-1.png" alt="Cliente-1">
+                <h3>Marte da Silva</h3>
+                <div class="stars">
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png"
+                        alt="star--v1" />
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png"
+                        alt="star--v1" />
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png"
+                        alt="star--v1" />
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png"
+                        alt="star--v1" />
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star-half-empty.png"
+                        alt="star-half-empty" />
+                </div>
+            </div>
+            <div class="box">
+                <img src="assets/quote-img.png" alt="comentario">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe mollitia, atque blanditiis suscipit
+                    natus accusamus, ex facilis itaque omnis rerum aut cum voluptas eius qui quam eveniet neque illo
+                    incidunt.</p>
+                <img src="assets/pic-3.png" alt="Cliente-2">
+                <h3>Pedro Pereira</h3>
+                <div class="stars">
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png"
+                        alt="star--v1" />
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png"
+                        alt="star--v1" />
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png"
+                        alt="star--v1" />
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png"
+                        alt="star--v1" />
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star-half-empty.png"
+                        alt="star-half-empty" />
+                </div>
+            </div>
+            <div class="box">
+                <img src="assets/quote-img.png" alt="comentario">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe mollitia, atque blanditiis suscipit
+                    natus accusamus, ex facilis itaque omnis rerum aut cum voluptas eius qui quam eveniet neque illo
+                    incidunt.</p>
+                <img src="assets/pic-2.png" alt="Cliente-3">
+                <h3>Julia Jas</h3>
+                <div class="stars">
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png"
+                        alt="star--v1" />
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png"
+                        alt="star--v1" />
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png"
+                        alt="star--v1" />
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png"
+                        alt="star--v1" />
+                    <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star-half-empty.png"
+                        alt="star-half-empty" />
+                </div>
+            </div>
+        </div>
+    </section>
+    
+    <section class="address" id="address">
+        <h2 class="tittle">Nosso <span>Endereço</span></h2>
+
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d54255807.52284294!2d168.1233407!3d33.902227900000014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dd2da9688b79a5%3A0x1e2c63557e51ecbf!2sCoffee%20Code!5e0!3m2!1spt-BR!2sbr!4v1720378073834!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section>
+    <section class="footer">
+        <div class="share">
+            <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/instagram-new--v1.png" alt="instagram-new--v1"/>
+            <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/facebook-new.png" alt="facebook-new"/>
+            <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/github.png" alt="github"/>
+            <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/twitterx--v2.png" alt="twitterx--v2"/>
 
         </div>
     </section>
