--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             </a>
 
             <nav class="navbar">
-                <a href="#home">Home</a>
+                <a href="#">Home</a>
                 <a href="#about">Sobre</a>
                 <a href="#menu">Menu</a>
                 <a href="#review">Avalições</a>
-                <a href="#addrress">Endereço</a>
+                <a href="#address">Endereço</a>
             </nav>
 
             <div class="icons">
@@ -118,11 +118,10 @@
         <div class="box-container">
             <div class="box">
                 <img src="assets/quote-img.png" alt="comentario">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe mollitia, atque blanditiis suscipit
-                    natus accusamus, ex facilis itaque omnis rerum aut cum voluptas eius qui quam eveniet neque illo
-                    incidunt.</p>
-                <img src="assets/pic-1.png" alt="Cliente-1">
-                <h3>Marte da Silva</h3>
+                <p>"Adorei o ambiente da cafeteria! O café é delicioso e os atendentes são super simpáticos. Um ótimo
+                    lugar para relaxar e trabalhar ao mesmo tempo. Com certeza voltarei mais vezes!"</p>
+                <img src="assets/pic-1.png" alt="Cliente-1" class="user">
+                <h3>Marte Silva</h3>
                 <div class="stars">
                     <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png"
                         alt="star--v1" />
@@ -138,10 +137,9 @@
             </div>
             <div class="box">
                 <img src="assets/quote-img.png" alt="comentario">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe mollitia, atque blanditiis suscipit
-                    natus accusamus, ex facilis itaque omnis rerum aut cum voluptas eius qui quam eveniet neque illo
-                    incidunt.</p>
-                <img src="assets/pic-3.png" alt="Cliente-2">
+                <p>"Lugar aconchegante e com uma decoração incrível. As opções de bolos e doces são maravilhosas, e o
+                    cappuccino é simplesmente perfeito. Só gostaria que tivessem mais opções veganas."</p>
+                <img src="assets/pic-3.png" alt="Cliente-2" class="user">
                 <h3>Pedro Pereira</h3>
                 <div class="stars">
                     <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png"
@@ -158,11 +156,10 @@
             </div>
             <div class="box">
                 <img src="assets/quote-img.png" alt="comentario">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe mollitia, atque blanditiis suscipit
-                    natus accusamus, ex facilis itaque omnis rerum aut cum voluptas eius qui quam eveniet neque illo
-                    incidunt.</p>
-                <img src="assets/pic-2.png" alt="Cliente-3">
-                <h3>Julia Jas</h3>
+                <p>"Melhor café da cidade! A qualidade dos grãos é excepcional e o atendimento é de primeira. Recomendo
+                    especialmente o café gelado com baunilha, é divino!"</p>
+                <img src="assets/pic-2.png" alt="Cliente-3" class="user">
+                <h3>Julia Jasmin</h3>
                 <div class="stars">
                     <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/star--v1.png"
                         alt="star--v1" />
@@ -178,19 +175,23 @@
             </div>
         </div>
     </section>
-    
+
     <section class="address" id="address">
         <h2 class="tittle">Nosso <span>Endereço</span></h2>
 
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d54255807.52284294!2d168.1233407!3d33.902227900000014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dd2da9688b79a5%3A0x1e2c63557e51ecbf!2sCoffee%20Code!5e0!3m2!1spt-BR!2sbr!4v1720378073834!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d54255807.52284294!2d168.1233407!3d33.902227900000014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dd2da9688b79a5%3A0x1e2c63557e51ecbf!2sCoffee%20Code!5e0!3m2!1spt-BR!2sbr!4v1720378073834!5m2!1spt-BR!2sbr"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
     <section class="footer">
         <div class="share">
-            <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/instagram-new--v1.png" alt="instagram-new--v1"/>
-            <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/facebook-new.png" alt="facebook-new"/>
-            <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/github.png" alt="github"/>
-            <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/twitterx--v2.png" alt="twitterx--v2"/>
-
+            <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/instagram-new--v1.png"
+                alt="instagram-new--v1" />
+            <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/facebook-new.png"
+                alt="facebook-new" />
+            <img width="30" height="30" src="https://img.icons8.com/ios-filled/30/ffffff/twitterx--v2.png"
+                alt="twitterx--v2" />
         </div>
     </section>
 </body>
